--- a/src/app/inicio/inicio.page.scss
+++ b/src/app/inicio/inicio.page.scss
@@ -1,10 +1,38 @@
-ion-row, ion-col{
+ion-row, ion-col, .filters{
     justify-content: center;
 }
 
-ion-col{
+ion-col, .filters, .search{
     display: flex;
     align-items: center;
+}
+
+.filters{
+    column-gap: 5%;
+    margin-left: 3%;
+    margin-right: 3%;
+    justify-content: space-around;
+}
+
+.search{
+    position: relative;
+    justify-content: end;
+}
+
+.search-text{
+    border: 2px solid #d7d7d7;
+    border-radius: 12px;
+}
+
+.search-button{
+    background-color:inherit;
+    position: absolute;
+    right: 5px;
+    z-index: 100;
+}
+
+.search-icon{
+    color: #666666;
 }
 
 .product-data{
