[#182738864] agregado pantalla historial de compras

--- a/src/app/perfil/perfil.page.html
+++ b/src/app/perfil/perfil.page.html
@@ -54,7 +54,7 @@
         </ion-card>  
       </ion-row>
       <ion-row class="history">
-        <ion-card>
+        <ion-card routerLink="historial-p">
           <ion-card-content>
             <div class="data-div">
               <ion-label class="data-label">Mi historial de pedidos</ion-label>
