[#182738762] agregado servicio carrito y cambios en productos

--- a/src/app/product-detail/product-detail.page.html
+++ b/src/app/product-detail/product-detail.page.html
@@ -8,43 +8,48 @@
   </ion-toolbar>
 </ion-header>
 
-<ion-content> 
+<ion-content>
   <ion-grid class="main-content">
-    <ion-row class="img"> <ion-img class="product-img" src="../../assets/img-prueba.webp"></ion-img> </ion-row>
+    <ion-row class="img">
+      <ion-img class="product-img" src="{{URL}}{{img}}"></ion-img>
+    </ion-row>
     <ion-row class="content">
-      <ion-row class="name"><ion-label class="product-name">Lampara</ion-label></ion-row>
+      <ion-row class="name">
+        <ion-label class="product-name">{{nombre_producto}}</ion-label>
+      </ion-row>
       <ion-row class="price">
         <ion-label class="price-label">$ 35.00</ion-label>
         <div class="spinner">
+
           <ion-button class="quantity-btn" color="dark" (click)="decrease()">-</ion-button>
-          <ion-label >{{cantidad}}</ion-label>
-          <ion-button class="quantity-btn" color="dark" (click)="increase()" >+</ion-button>
+          <ion-label>{{cantidad}}</ion-label>
+          <ion-button class="quantity-btn" color="dark" (click)="increase()">+</ion-button>
+          
         </div>
       </ion-row>
-      <ion-row class="review"> 
-          <ion-img src="../../assets/icon/star-icon.svg" class="star-icon"></ion-img>
-          <ion-label class="star-number">4.5</ion-label>
+      <ion-row class="review">
+        <ion-img src="../../assets/icon/star-icon.svg" class="star-icon"></ion-img>
+        <ion-label class="star-number">4.5</ion-label>
         <ion-text class="reviews-number">(50) reseñas</ion-text>
       </ion-row>
       <ion-row class="comment">
         <ion-content>
           <ion-text>
-        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Mauris
-        pellentesque mauris nec feugiat pharetra. Morbi finibus sit amet risus
-        vitae ultrices. Nulla posuere bibendum tellus sit amet facilisis.
-        Aliquam imperdiet enim id erat fermentum, ut fringilla dolor
-        imperdiet. In molestie nisi sed vulputate feugiat. Nam consectetur
-        dapibus diam, vitae luctus libero hendrerit sit amet
+            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Mauris
+            pellentesque mauris nec feugiat pharetra. Morbi finibus sit amet risus
+            vitae ultrices. Nulla posuere bibendum tellus sit amet facilisis.
+            Aliquam imperdiet enim id erat fermentum, ut fringilla dolor
+            imperdiet. In molestie nisi sed vulputate feugiat. Nam consectetur
+            dapibus diam, vitae luctus libero hendrerit sit amet
           </ion-text>
         </ion-content>
       </ion-row>
       <ion-row class="add">
-        <ion-button color="dark" class="fav-button"><ion-icon name="bookmark-outline"></ion-icon></ion-button>
-        <ion-button color="dark" class="add-button semibold-text">Añadir al carrito</ion-button>
+        <ion-button color="dark" class="fav-button">
+          <ion-icon name="bookmark-outline"></ion-icon>
+        </ion-button>
+        <ion-button (click)="addCart()" color="dark" class="add-button semibold-text">Añadir al carrito</ion-button>
       </ion-row>
-  </ion-row>
+    </ion-row>
   </ion-grid>
 </ion-content>
-
-
-
