[#182738733] terminado pantallas y funciones en carrito de compras y se añadio mensaje flotante al añadir al carrito

--- a/src/app/inicio/inicio.page.html
+++ b/src/app/inicio/inicio.page.html
@@ -3,7 +3,7 @@
     <div class="header">
       <ion-icon name="leaf-outline" size="large" class="header-icon"></ion-icon>
       <ion-title class="ion-text-center header-title">Inicio</ion-title>
-      <ion-icon name="cart-outline" size="large" class="header-icon"></ion-icon>
+      <ion-icon routerLink="carro" name="cart-outline" size="large" class="header-icon"></ion-icon>
     </div>
     <div class="filters">
       <ion-text class="search">
