[#182725164] registro del cliente 1

--- a/src/app/agregar-tarjeta/agregar-tarjeta.page.html
+++ b/src/app/agregar-tarjeta/agregar-tarjeta.page.html
@@ -2,7 +2,7 @@
   <ion-toolbar>
     <div class="header">
       <ion-icon name="chevron-back-outline" size="large" class="header-icon" routerLink="/tabs/perfil/tarjetas"></ion-icon>
-      <ion-title class="ion-text-center header-title">Agregar tarjeta</ion-title>
+      <ion-title class="ion-text-center header-title">Agregar</ion-title>
       <ion-icon class="header-icon"></ion-icon>
     </div>
   </ion-toolbar>
@@ -30,7 +30,7 @@
       </ion-text>
       </ion-col>
       <ion-col class="holder">
-        <ion-label> Fecha de expiración</ion-label>
+        <ion-label> Fecha exp</ion-label>
       <ion-text>
         <ion-input class="input-data" type="text" placeholder="Ex: 01/22"></ion-input>
       </ion-text>
