--- a/src/app/inicio/inicio.page.html
+++ b/src/app/inicio/inicio.page.html
@@ -8,7 +8,7 @@
     <div class="filters">
       <ion-text class="search">
         <ion-input class="search-text" type="text" [(ngModel)]="productName"></ion-input>
-        <button  class="search-button" (click)="changeName()"><ion-icon class="search-icon" size="large" name="search-outline"></ion-icon></button>
+        <button  class="search-button" (click)="searchName()"><ion-icon class="search-icon" size="large" name="search-outline"></ion-icon></button>
         
       </ion-text>
       <ion-list>
