--- a/src/app/ingreso/ingreso.page.html
+++ b/src/app/ingreso/ingreso.page.html
@@ -11,13 +11,13 @@
           <ion-label class="info">
             <ion-label class="i">
               <ion-text class="var">Correo</ion-text>
-              <ion-input class="var" type="text" [(ngModel)]="email"></ion-input>
+              <ion-input class="var" type="text" [(ngModel)]="client.email"></ion-input>
             </ion-label>
           </ion-label>
           <ion-label class="info">
             <ion-label class="i">
               <ion-text class="var">Contraseña</ion-text>
-              <ion-input class="var" type="password" [(ngModel)]="password"></ion-input>
+              <ion-input class="var" type="password" [(ngModel)]="client.password"></ion-input>
             </ion-label>
           </ion-label>
         </ion-card-content>
@@ -31,13 +31,13 @@
       <ion-label class="action-start-button">
         <ion-button
           color="dark"
-          (click)="enter()"
+          (click)="login()"
           class="start-button semibold-text"
           >Iniciar</ion-button
         ></ion-label
       >
       <ion-label class="action semibold-text">
-        <a routerLink="tabs">Omitir</a>
+        <a [routerLink]="['/tabs',0]">Omitir</a>
       </ion-label>
 
       <ion-label class="action semibold-text">
@@ -82,9 +82,8 @@
             <ion-label>
               <ion-input
                 class="var"
-                #inputEmail
                 type="email"
-                (input)="showInput(inputEmail.value)"
+                [(ngModel)]="emailRecovery"
               ></ion-input>
             </ion-label>
           </ion-label>
