--- a/src/app/product-detail/product-detail.page.html
+++ b/src/app/product-detail/product-detail.page.html
@@ -11,7 +11,7 @@
 <ion-content>
   <ion-grid class="main-content">
     <ion-row class="img">
-      <ion-img class="product-img" src="{{URL}}{{img}}"></ion-img>
+      <ion-img class="product-img" src="{{img}}"></ion-img>
     </ion-row>
     <ion-row class="content">
       <ion-row class="name">
@@ -48,7 +48,7 @@
         <ion-button color="dark" class="fav-button">
           <ion-icon name="bookmark-outline"></ion-icon>
         </ion-button>
-        <ion-button (click)="addCart(id,quantity)" color="dark" class="add-button semibold-text">Añadir al carrito</ion-button>
+        <ion-button (click)="addCart(id)" color="dark" class="add-button semibold-text">Añadir al carrito</ion-button>
       </ion-row>
     </ion-row>
   </ion-grid>
